# prl_bib2html

./: .gitignore  LICENSE  PROJECTS_FEATURE.md  README.md  app.py  lab.yaml  publications.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: people.yaml  projects.yaml
data/bib/: siddpubs-conf.bib
demos/flask/: README.md  app.py  config.yaml
demos/flask/data/: projects.yaml
demos/flask/templates/: base.html  people.html  projects.html  publications.html
demos/html/: README.md  config.yaml  generate_html.py  publications.html
demos/html/data/: projects.yaml
demos/jekyll/: README.md  config.yaml  generate_jekyll_data.py  projects.yml  projects_template.md  publications.yml  publications_template.md
examples/: README.md  basic_usage.py  config.yaml
jekyll_generator/: README.md  generate_jekyll_data.py  projects_template.md  publications_template.md
labdata/: __init__.py  assembler.py  cli.py  config.py  config_schema.py  exporters.py  latex.py  loaders.py  models.py  publications.py  resolver.py
labdata/parsers/: bibtex.py
prl_bib2html/: __init__.py  cli.py  config_schema.py  publications.py
prl_bib2html.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
prl_pubsite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
site/: _config.yml
site/_data/: navigation.yml
site/_includes/: author_list.html  publication.html
site/_pages/: index.md  people.md  projects.md  publications.md
templates/: publications.html
tests/: conftest.py  test_cli.py  test_config.py  test_exporters.py  test_latex.py  test_models.py  test_parsers.py  test_resolver.py  test_smoke.py
tests/fixtures/: lab.yaml  people.yaml  projects.yaml  sample.bib
