[project]
name = "labdata"
version = "2.0.0-dev"
description = "Renderer-agnostic academic lab data assembler: BibTeX + YAML → structured data"
requires-python = ">=3.8"
dependencies = [
    "bibtexparser",
    "pyyaml"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
labdata = "labdata.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["labdata*"]
